sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped:Boolean= false
	var tab = new Array[Int] (0)
	do {
		for (i<-0 to getNombreValeurs()-1){
			if (plusPetit(i,i+1)){
				echange(i,i+1)
				swapped=true
			}
			
		}
		while swapped ==true
	}

	
	}

